# SimuNet-Multi-Agent-Social-Network-Simulator-for-Engagement-Moderation

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.kiro/specs/simu-net/: design.md  requirements.md  tasks.md
docs/: API.md  ARCHITECTURE.md
src/simu_net/: __init__.py  config.py
src/simu_net/agents/: __init__.py  base.py  content_agent.py  moderator_agent.py  platform_agent.py  registry.py  user_agent.py
src/simu_net/api/: __init__.py
src/simu_net/core/: __init__.py
src/simu_net/events/: __init__.py  manager.py  models.py
src/simu_net/ml/: __init__.py
src/simu_net/monitoring/: __init__.py
src/simu_net/vector/: __init__.py  faiss_manager.py  similarity_search.py  vector_store.py
tests/: __init__.py  conftest.py
tests/test_agents/: __init__.py  test_base.py  test_content_agent.py  test_content_agent_integration.py  test_moderator_agent.py  test_platform_agent.py  test_registry.py  test_user_agent.py  test_user_agent_integration.py
tests/test_data/: __init__.py  test_models.py
tests/test_events/: __init__.py  test_models.py
tests/test_vector/: __init__.py  test_faiss_manager.py
